--- a/package.json
+++ b/package.json
@@ -23,14 +23,17 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
     "html-webpack-plugin": "^4.5.0",
     "node-sass": "^5.0.0",
+    "postcss": "^8.1.13",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "react-refresh": "^0.9.0",
     "style-loader": "^2.0.0",
+    "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
