--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.12.0",
     "prosemirror-state": "^1.3.3",
+    "prosemirror-tables": "^1.1.1",
     "prosemirror-transform": "^1.2.8",
+    "prosemirror-utils": "^0.9.6",
     "prosemirror-view": "^1.16.4",
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
@@ -46,6 +48,7 @@
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
     "react-refresh": "^0.9.0",
+    "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.1",
     "typescript": "^4.1.2",
