--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
+    "monaco-editor": "^0.21.2",
     "prosemirror-commands": "^1.1.4",
     "prosemirror-history": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
@@ -41,7 +42,9 @@
     "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "monaco-editor-webpack-plugin": "^2.0.0",
     "node-sass": "^5.0.0",
     "postcss": "^8.1.13",
     "postcss-loader": "^4.1.0",
