--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
     "monaco-editor": "^0.21.2",
+    "preact": "^10.5.7",
     "prosemirror-commands": "^1.1.4",
     "prosemirror-history": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
