--- a/package.json
+++ b/package.json
@@ -43,8 +43,10 @@
     "autoprefixer": "^10.0.4",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.0.1",
+    "css-minimizer-webpack-plugin": "^1.1.5",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^4.5.0",
+    "mini-css-extract-plugin": "^1.3.2",
     "monaco-editor-webpack-plugin": "^2.0.0",
     "node-sass": "^5.0.0",
     "postcss": "^8.1.13",
