Add support for list items

--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "preact": "^10.5.7",
     "prosemirror-commands": "^1.1.4",
     "prosemirror-history": "^1.1.3",
+    "prosemirror-inputrules": "^1.1.3",
     "prosemirror-keymap": "^1.1.4",
     "prosemirror-model": "^1.12.0",
+    "prosemirror-schema-list": "^1.1.4",
     "prosemirror-state": "^1.3.3",
     "prosemirror-transform": "^1.2.8",
     "prosemirror-view": "^1.16.4",
@@ -33,8 +35,10 @@
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
     "@types/prosemirror-commands": "^1.0.3",
     "@types/prosemirror-history": "^1.0.1",
+    "@types/prosemirror-inputrules": "^1.0.3",
     "@types/prosemirror-keymap": "^1.0.3",
     "@types/prosemirror-model": "^1.11.1",
+    "@types/prosemirror-schema-list": "^1.0.1",
     "@types/prosemirror-state": "^1.2.5",
     "@types/prosemirror-transform": "^1.1.1",
     "@types/prosemirror-view": "^1.16.1",
