--- a/package.json
+++ b/package.json
@@ -6,11 +6,20 @@
   "scripts": {
     "start": "webpack serve --mode development --hot",
     "build": "NODE_ENV=production webpack --mode production",
-    "check-types": "tsc"
+    "check-types": "tsc",
+    "server": "nodemon --watch package.json --watch src/server/**/*.ts --exec ts-node src/server/routes.ts"
   },
   "dependencies": {
+    "@hapi/iron": "^6.0.0",
+    "@prisma/cli": "^2.13.0",
+    "@prisma/client": "^2.13.0",
     "@tailwindcss/forms": "^0.2.1",
+    "cookie": "^0.4.1",
+    "dotenv": "^8.2.0",
+    "fastify": "^3.9.1",
     "monaco-editor": "^0.21.2",
+    "passport": "^0.4.1",
+    "passport-github": "^1.1.0",
     "preact": "^10.5.7",
     "prosemirror-commands": "^1.1.4",
     "prosemirror-history": "^1.1.3",
@@ -33,6 +42,10 @@
     "@babel/preset-react": "^7.12.7",
     "@babel/preset-typescript": "^7.12.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.4.3",
+    "@types/cookie": "^0.4.0",
+    "@types/node": "12.12.2",
+    "@types/passport": "^1.0.4",
+    "@types/passport-github": "^1.1.5",
     "@types/prosemirror-commands": "^1.0.3",
     "@types/prosemirror-history": "^1.0.1",
     "@types/prosemirror-inputrules": "^1.0.3",
@@ -53,6 +66,7 @@
     "mini-css-extract-plugin": "^1.3.2",
     "monaco-editor-webpack-plugin": "^2.0.0",
     "node-sass": "^5.0.0",
+    "nodemon": "^2.0.6",
     "postcss": "^8.1.13",
     "postcss-loader": "^4.1.0",
     "postcss-preset-env": "^6.7.0",
@@ -60,6 +74,7 @@
     "sass-loader": "^10.1.0",
     "style-loader": "^2.0.0",
     "tailwindcss": "^2.0.1",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.2",
     "webpack": "^5.9.0",
     "webpack-cli": "^4.2.0",
